--- a/src/product.html
+++ b/src/product.html
@@ -7,157 +7,147 @@
 <body>
     <div class="wrapper">
         @@include('html/header.html')
-        <main class="page product">
-            <div class="page__container">
-                <ul class="breadcrumbs">
-                    <li class="breadcrumbs__item"><a href="/">Головна</a></li>
-                    <li class="breadcrumbs__item"><a href="./catalog.html">Ноутбуки</a></li>
-                    <li class="breadcrumbs__item"><span class="breadcrumbs__item-current">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</span></li>
-                </ul>
-                <div class="product__body">
-                    <div class="gallery">
-                        <div class="gallery__slider swiper">
-                            <div class="gallery__wrapper swiper-wrapper">
-                                <div data-type="gallery" class="gallery__slide swiper-slide"><img
-                                        src="img/product5.webp" alt="Laptop"></div>
-                                <div data-type="gallery" class="gallery__slide swiper-slide"><img src="img/product2.png"
-                                        alt="Laptop"></div>
-                                <div data-type="gallery" class="gallery__slide swiper-slide"><img
-                                        src="img/product3.webp" alt="Laptop"></div>
-                                <div data-type="gallery" class="gallery__slide swiper-slide"><img src="img/product4.png"
-                                        alt="Laptop"></div>
-                            </div>
-                        </div>
-                        <div class="thumbs-slider__wrapper">
-                            <div class="thumbs__slider swiper">
-                                <div class="thumbs__wrapper swiper-wrapper">
-                                    <div class="thumbs__slide swiper-slide"><img src="img/product5.webp" alt="Laptop"></div>
-                                    <div class="thumbs__slide swiper-slide"><img src="img/product2.png" alt="Laptop"></div>
-                                    <div class="thumbs__slide swiper-slide"><img src="img/product3.webp" alt="Laptop"></div>
-                                    <div class="thumbs__slide swiper-slide"><img src="img/product4.png" alt="Laptop"></div>
-                                </div>
-                            </div>
-                            <button class="thumbs-prev swiper-button-prev">
-                                <svg width="30" height="30">
-                                    <use xlink:href="img/icons/icons.svg#swiper-arrow"></use>
-                                </svg>
-                            </button>
-                            <button class="thumbs-next swiper-button-next">
-                                <svg width="30" height="30">
-                                    <use xlink:href="img/icons/icons.svg#swiper-arrow"></use>
-                                </svg>
-                            </button>
+        <main class="page product container">
+            <ul class="breadcrumbs">
+                <li class="breadcrumbs__item"><a href="/">Головна</a></li>
+                <li class="breadcrumbs__item"><a href="./catalog.html">Ноутбуки</a></li>
+                <li class="breadcrumbs__item"><span class="breadcrumbs__item-current">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</span></li>
+            </ul>
+            <div class="product__body">
+                <div class="product__gallery gallery">
+                    <div class="gallery__slider swiper">
+                        <div class="gallery__wrapper swiper-wrapper">
+                            <div data-type="gallery" class="gallery__slide swiper-slide"><img
+                                    src="img/product5.webp" alt="Laptop"></div>
+                            <div data-type="gallery" class="gallery__slide swiper-slide"><img src="img/product2.png"
+                                    alt="Laptop"></div>
+                            <div data-type="gallery" class="gallery__slide swiper-slide"><img
+                                    src="img/product3.webp" alt="Laptop"></div>
+                            <div data-type="gallery" class="gallery__slide swiper-slide"><img src="img/product4.png"
+                                    alt="Laptop"></div>
                         </div>
                     </div>
-                    <div class="product__text">
-                        <h1 class="product__title title-second">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</h1>
-                        <span class="product__status">В наявності</span>
-                        <a href="./reviews.html" class="product__link">Залишити відгук</a>
-                        <div class="product__row">
-                            <div class="product-price">
-                                <p class="product-price__old">19999 грн</p>
-                                <p class="product-price__actual">15000 грн</p>
-                            </div>
-                            <button data-type="cart" class="product__btn button">Придбати</button>
-                        </div>
-                    </div>
-                    <div data-tabs class="product-add-info">
-                        <nav data-tabs-titles class="product-add-info__navigation">
-                            <button type="button" class="product-add-info__title _tab-active">Оплата</button>
-                            <button type="button" class="product-add-info__title">Доставка</button>
-                            <button type="button" class="product-add-info__title">Дод. послуги</button>
-                        </nav>
-                        <div data-tabs-body class="product-add-info__content">
-                            <div class="product-add-info__body">
-                                <p>
-                                    Готівковий розрахунок, оплата картою онлайн та по терміналу, оплата частинами
-                                    monobank и ПриватБанк, розстрочка Плати Пізніше, безготівкова оплата з ПДВ та без
-                                    ПДВ
-                                </p>
-                            </div>
-                            <div class="product-add-info__body">
-                                <p>
-                                    Нова Пошта: ​​ Усі відділення Нової Пошти відновили роботу.
-                                    Відправка товару може займати 1-3 робочі дні. За кожним замовленням ми уточнюємо
-                                    можливість надсилання.
-                                    Кур'єрська доставка CompX до м.Київ:Лівий берег - 190 грнПравий берег - 350 грнЗа
-                                    місто - від 500 грн (обговорюється індивідуально)Швидка доставка iPOST:Лівий берег
-                                    -
-                                    190 грнПравий берег - 350 грн
-                                    Передплата за відправку деяких товарів: Монітори/корпуси/великогабаритні
-                                    товари -
-                                    500 грн Відеокарти від 20 тис.грн – 300 грн
-                                </p>
-                            </div>
-                            <div class="product-add-info__body">
-                                <p>
-                                    Нова Пошта: ​​ Усі відділення Нової Пошти відновили роботу.
-                                    Відправка товару може займати 1-3 робочі дні. За кожним замовленням ми уточнюємо
-                                    можливість надсилання.
-                                    Кур'єрська доставка CompX до м.Київ:Лівий берег - 190 грнПравий берег - 350 грнЗа
-                                    місто - від 500 грн (обговорюється індивідуально)Швидка доставка iPOST:Лівий берег
-                                    -
-                                    190 грнПравий берег - 350 грн
-                                    Передплата за відправку деяких товарів: Монітори/корпуси/великогабаритні
-                                    товари -
-                                    500 грн Відеокарти від 20 тис.грн – 300 грн
-                                </p>
+                    <div class="gallery__thumbs thumbs">
+                        <div class="thumbs__slider swiper">
+                            <div class="thumbs__wrapper swiper-wrapper">
+                                <div class="thumbs__slide swiper-slide"><img src="img/product5.webp" alt="Laptop"></div>
+                                <div class="thumbs__slide swiper-slide"><img src="img/product2.png" alt="Laptop"></div>
+                                <div class="thumbs__slide swiper-slide"><img src="img/product3.webp" alt="Laptop"></div>
+                                <div class="thumbs__slide swiper-slide"><img src="img/product4.png" alt="Laptop"></div>
                             </div>
                         </div>
+                        <button class="thumbs__prev swiper-button-prev">
+                            <svg width="30" height="30">
+                                <use xlink:href="img/icons/icons.svg#swiper-arrow"></use>
+                            </svg>
+                        </button>
+                        <button class="thumbs__next swiper-button-next">
+                            <svg width="30" height="30">
+                                <use xlink:href="img/icons/icons.svg#swiper-arrow"></use>
+                            </svg>
+                        </button>
                     </div>
-                    <div data-tabs class="product-details">
-                        <nav data-tabs-titles class="product-details__navigation">
-                            <button type="button" class="product-details__title _tab-active">Опис</button>
-                            <button type="button" class="product-details__title">Характеристики</button>
-                        </nav>
-                        <div data-tabs-body class="product-details__content">
-                            <div class="product-details__body">
-                                <p>
-                                    Пропонуємо до Вашої уваги Ноутбук 15.6" Gigabyte AORUS 15 BSF (BSF-73KZ754SD)
-                                    Гарантія:
-                                    24 міс.
-                                </p>
-                            </div>
-                            <table class="table product-details__body">
-                                <tr class="table__row">
-                                    <th class="table__item">Стан:</th>
-                                    <td class="table__item">Новий</td>
-                                </tr>
-                                <tr class="table__row">
-                                    <th class="table__item">Процесор:</t>
-                                    <td class="table__item">Intel Core i7-13700H</td>
-                                </tr>
-                                <tr class="table__row">
-                                    <th class="table__item">Діагональ екрану:</th>
-                                    <td class="table__item">15.6</td>
-                                </tr>
-                                <tr class="table__row">
-                                    <th class="table__item">Тип матриці:</th>
-                                    <td class="table__item">IPS</td>
-                                </tr>
-                                <tr class="table__row">
-                                    <th class="table__item">Тип видеокарти:</th>
-                                    <td class="table__item">Дискретна</td>
-                                </tr>
-                                <tr class="table__row">
-                                    <th class="table__item">Обсяг оперативної пам'яті:</th>
-                                    <td class="table__item">16 ГБ</td>
-                                </tr>
-                            </table>
+                </div>
+                <div class="product-text">
+                    <h1 class="product-text__title title-second">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</h1>
+                    <span class="product-text__status">В наявності</span>
+                    <a href="./reviews.html" class="product__link">Залишити відгук</a>
+                    <div class="product-text__row">
+                        <div class="product__price">
+                            <p class="product-text__price-old">19999 грн</p>
+                            <p class="product-text__price-actual">15000 грн</p>
+                        </div>
+                        <button data-type="cart" class="product-text__btn button">Придбати</button>
+                    </div>
+                </div>
+                <div data-tabs class="product__add-info add-info">
+                    <nav data-tabs-titles class="add-info__navigation">
+                        <button type="button" class="tab-title _tab-active">Оплата</button>
+                        <button type="button" class="tab-title">Доставка</button>
+                        <button type="button" class="tab-title">Дод. послуги</button>
+                    </nav>
+                    <div data-tabs-body class="add-info__content">
+                        <div class="add-info__body">
+                            <p>
+                                Готівковий розрахунок, оплата картою онлайн та по терміналу, оплата частинами
+                                monobank и ПриватБанк, розстрочка Плати Пізніше, безготівкова оплата з ПДВ та без
+                                ПДВ
+                            </p>
+                        </div>
+                        <div class="add-info__body">
+                            <p>
+                                Нова Пошта: ​​ Усі відділення Нової Пошти відновили роботу.
+                                Відправка товару може займати 1-3 робочі дні. За кожним замовленням ми уточнюємо
+                                можливість надсилання.
+                                Кур'єрська доставка CompX до м.Київ:Лівий берег - 190 грнПравий берег - 350 грнЗа
+                                місто - від 500 грн (обговорюється індивідуально)Швидка доставка iPOST:Лівий берег
+                                -
+                                190 грнПравий берег - 350 грн
+                                Передплата за відправку деяких товарів: Монітори/корпуси/великогабаритні
+                                товари -
+                                500 грн Відеокарти від 20 тис.грн – 300 грн
+                            </p>
+                        </div>
+                        <div class="add-info__body">
+                            <p>
+                                Нова Пошта: ​​ Усі відділення Нової Пошти відновили роботу.
+                                Відправка товару може займати 1-3 робочі дні. За кожним замовленням ми уточнюємо
+                                можливість надсилання.
+                                Кур'єрська доставка CompX до м.Київ:Лівий берег - 190 грнПравий берег - 350 грнЗа
+                                місто - від 500 грн (обговорюється індивідуально)Швидка доставка iPOST:Лівий берег
+                                -
+                                190 грнПравий берег - 350 грн
+                                Передплата за відправку деяких товарів: Монітори/корпуси/великогабаритні
+                                товари -
+                                500 грн Відеокарти від 20 тис.грн – 300 грн
+                            </p>
                         </div>
                     </div>
                 </div>
+                <div data-tabs class="product-details">
+                    <nav data-tabs-titles class="product-details__navigation">
+                        <button type="button" class="tab-title _tab-active">Опис</button>
+                        <button type="button" class="tab-title">Характеристики</button>
+                    </nav>
+                    <div data-tabs-body class="product-details__content">
+                        <div class="product-details__body">
+                            <p>
+                                Пропонуємо до Вашої уваги Ноутбук 15.6" Gigabyte AORUS 15 BSF (BSF-73KZ754SD)
+                                Гарантія:
+                                24 міс.
+                            </p>
+                        </div>
+                        <table class="table product-details__body">
+                            <tr class="table__row">
+                                <th class="table__item">Стан:</th>
+                                <td class="table__item">Новий</td>
+                            </tr>
+                            <tr class="table__row">
+                                <th class="table__item">Процесор:</t>
+                                <td class="table__item">Intel Core i7-13700H</td>
+                            </tr>
+                            <tr class="table__row">
+                                <th class="table__item">Діагональ екрану:</th>
+                                <td class="table__item">15.6</td>
+                            </tr>
+                            <tr class="table__row">
+                                <th class="table__item">Тип матриці:</th>
+                                <td class="table__item">IPS</td>
+                            </tr>
+                            <tr class="table__row">
+                                <th class="table__item">Тип видеокарти:</th>
+                                <td class="table__item">Дискретна</td>
+                            </tr>
+                            <tr class="table__row">
+                                <th class="table__item">Обсяг оперативної пам'яті:</th>
+                                <td class="table__item">16 ГБ</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </div>
-            <button class="to-top button-action">
-                <svg width="50" height="50">
-                    <use xlink:href="img/icons/icons.svg#more"></use>
-                </svg>
-            </button>
-            <button data-type="callback" class="callback__btn button-action">
-                <svg width="50" height="50">
-                    <use xlink:href="img/icons/icons.svg#phone"></use>
-                </svg>
-            </button>
+            @@include('html/to-top.html')
+            @@include('html/callback-btn.html')
         </main>
         @@include('html/footer.html')
         @@include('html/gallery-popup.html')
